<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">DubnaBus</string>
    <string name="route_selection">Маршруты</string>
    <string name="route_refresh">Обновить</string>
    <string name="title_activity_dubna_bus">DubnaBus</string>
    <string name="loading_routes">Пожалуйста, подождите, загружаю маршруты..</string>
    <string name="submit_routes">Выбрать</string>
    <string name="cancel_routes_selection">Отмена</string>
    <string name="dlg_title">Оповещение</string>
    <string name="dlg_text1">Оповестить за указанное число минут до прихода автобуса, согласно расписанию</string>
    <string name="dlg_note1">Учитываются только выбранные в данный момент маршруты</string>
    <string name="dlg_yes">Да</string>
    <string name="dlg_no">Нет</string>
    <string name="kmph">км/ч</string>
    <string name="min_before_alarm">Минут до оповещения:\u0008</string>
    <string name="awaiting_bus">. Ожидается автобус №</string>
    <string name="no_bus">К сожалению, на выбранных маршрутах нет автобусов, удовлетворяющих условиям</string>
    <string name="bus_number">Автобус №</string>
    <string name="min">\u0008мин.</string>
    <string name="arrives_in">Через\u0008</string>
    <string name="bus_notification">Автобус</string>
    <string name="trainsDM">Поезда Дубна-Москва</string>
    <string name="trainsMD">Поезда Москва-Дубна</string>
    <string name="busesDM">Автобусы Дубна-Москва</string>
    <string name="busesMD">Автобусы Москва-Дубна</string>
    <string name="taxi">Такси</string>
    <string name="connection_problem">Проблема при подключении к серверу</string>
    <string name="problem">Не удается получить данные, проблемы с соединением. Попробуйте повторить действие.</string>
    <string name="download_taxi">Не желаете скачать отдельное приложение для такси?</string>
    <string name="do_not_show">Больше не показывать</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>
    <string name="title_activity_info">О программе</string>
    <string name="info1">Приложение позволяет выбрать маршрут интересующего Вас автобуса Дубны и проследить его по карте, используя ГЛОНАСС.
        Предложения по улучшению, добавлению возможностей, а также сведения об ошибках Вы можете направить на электронную почту.</string>
    <string name="info2">Разработка велась без какой-либо коммерческой выгоды.</string>
    <string name="sources">Исходный код:</string>
    <string name="mail_to">Отправить сообщение на почту</string>
    <string name="rate_app">Оценить на Google Play</string>
    <string name="donate">Купить мне пива</string>
    <string name="google_play_link">https://play.google.com/store/apps/details?id=ru.ratadubna.dubnabus</string>
    <string name="taxi_app_link">https://play.google.com/store/apps/details?id=ru.dmide.dubnataxi</string>
    <string name="taxi_app_package">ru.dmide.dubnataxi</string>

    <string name="release_map_key">AIzaSyBst62_tFcudzB1L1r-Z3CwaIb_3Jqqz_A</string>
    <!--map will only draw in dev with debug key-->
    <!--this key is generated in Google dev console and based on debug keystore which is-->
    <!--located in %user%/.android folder and unique to every user.-->
    <!--Therefore, you should generate this key every time you start dev with new machine or user-->

    <string name="debug_map_key">AIzaSyA6ucS_-IDMkpbINejrXaTsmixXrK3VQIc</string>
    <!--<string name="debug_map_key">AIzaSyDVyKh_-u72Qvj2HJBzqkaKZ-Bz_sGbWzA</string>  #1 -->

    <string name="playProblems">Неполадки с Google Play Services, установите обновление Google Play или прошивки</string>
    <string name="mapProblems">Возникли проблемы, возможно, Вам нужно обновить прошивку</string>

    <string name="trains_DM_url">http://m.rasp.yandex.ru/search?toName=Москва\u0026fromName=Дубна\u0026search_type=suburban\u0026fromId=c215</string>
    <string name="trains_MD_url">http://m.rasp.yandex.ru/search?toName=Дубна\u0026toId=c215\u0026fromName=Москва\u0026search_type=suburban</string>
    <string name="buses_DM_url">http://m.rasp.yandex.ru/search?toName=Москва\u0026fromName=Дубна\u0026search_type=bus\u0026fromId=c215</string>
    <string name="buses_MD_url">http://m.rasp.yandex.ru/search?toName=Дубна\u0026toId=c215\u0026fromName=Москва\u0026search_type=bus</string>
    <string name="taxi_url">http://www.dubna.ru/143</string>
    <string name="map_routes_url"><![CDATA[http://ratadubna.ru/nav/schedule.php?o=1006&m=]]></string>
    <string name="map_stops_url"><![CDATA[http://ratadubna.ru/nav/schedule.php?o=1002&p=1&m=]]></string>
    <string name="schedule_url"><![CDATA[http://ratadubna.ru/nav/schedule.php?o=5&s=]]></string>
    <string name="bus_location_url"><![CDATA[http://ratadubna.ru/nav/schedule.php?o=1004]]></string>
    <string name="bus_type_59_remote_file">file:///android_res/drawable/busType59.png</string>
    <string name="bus_type_91_remote_file">file:///android_res/drawable/busType91.png</string>

    <string-array name="donation_google_catalog_values">
        <item>Buy me a beer!</item>
        <item>Buy me 2 beers!</item>
        <item>Buy me 3 beers!</item>
        <item>Buy me 5 beers!</item>
        <item>Buy me 10 beers!</item>
    </string-array>

</resources>